Alignment issue corrected

--- a/client/src/Components/Login/ForgotPassword.module.css
+++ b/client/src/Components/Login/ForgotPassword.module.css
@@ -3,7 +3,6 @@
     height: 100%;
     display: flex;
     flex-direction: row;
-    gap: 20px;
 }
 
 .ForgetPasswordContainer > :first-child {
