--- a/client/src/Components/Login/Login.module.css
+++ b/client/src/Components/Login/Login.module.css
@@ -3,7 +3,6 @@
   height: 100%;
   display: flex;
   flex-direction: row;
-  gap: 20px;
 }
 
 .LoginContainer > :first-child {
